--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,17 @@ services:
   - type: web
     name: reconhecimento-facial-api
     runtime: python
-    # pythonVersion: "3.9" # Especifique uma versão se necessário, ex: "3.8", "3.9", "3.10"
+    # pythonVersion: "3.11" # Você pode especificar a versão do Python se necessário, ex: 3.9, 3.10, 3.11
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: gunicorn --workers 1 --threads 4 --timeout 300 app:app # Timeout aumentado para 120s, ajuste threads conforme necessário
-    env: python # Esta linha 'env: python' pode ser 'runtimeSpecific', ex: PYTHON_VERSION
-    plan: free
+    startCommand: echo "====== O START COMMAND DO RENDER.YAML FOI EXECUTADO ======" && ls -la && gunicorn --workers 1 --threads 2 --timeout 120 app:app
+    envVars: # Melhor forma de definir variáveis de ambiente
+      - key: PYTHON_VERSION # Exemplo, se precisar forçar a versão do Python
+        value: "3.11"      # Ajuste conforme a versão que suas dependências precisam
+      - key: FLASK_ENV      # Embora Gunicorn não use diretamente, pode ser útil para extensões Flask
+        value: production
+    plan: free # Ou o plano que você estiver usando
     autoDeploy: true
-    healthCheckPath: / # Adiciona um health check para o Render saber se a API está OK
+    healthCheckPath: / # Rota para o Render verificar se a aplicação está saudável
+    # region: frankfurt # Opcional: Especifique a região se necessário, ex: oregon, frankfurt
